--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,20 +1,20 @@
 version: "3.7"
 services:
-  mysql:
-    image: mysql/mysql-server:8.0.23
-    container_name: mysql
-    restart: always
-    volumes:
-      - ~/volumes/mysql:/var/lib/mysql
+  gogolook:
+    image: ${REPO}/${CONTAINER}:${TAG}
+    container_name: ${CONTAINER}
     environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_USER: deployer
-      MYSQL_PASSWORD: Password@1
-    ports:
-      - "3306:3306"
-    networks:
-      - nginx
-networks:
-  nginx:
-    external: true
-    name: nginx
+      - TZ=Asia/Taipei
+    volumes:
+      - ~/volumes/gogolook:/usr/src/module/logs
+      - ~/etc/timezone:/etc/localtime:ro
+    ports: 
+      - ${PORT}:${PORT}
+    env_file:
+      - ${ENV}
+    healthcheck:
+      test: ["CMD-SHELL", "curl -fs http://localhost:${PORT}/healthCheck || exit 1"]
+      interval: 60s
+      timeout: 10s
+      start_period: 10s
+    restart: always
